--- a/Reports/report.html
+++ b/Reports/report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">TestCase Reporter</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 7, 2024 11:34:26 am</span></a>
+<a href="#"><span class="badge badge-primary">Jan 8, 2024 06:35:46 pm</span></a>
 </li>
 </ul>
 </div>
@@ -86,7 +86,7 @@
           <div class="test-detail">
             <p class="name">ValidateBottomLinks</p>
             <p class="text-sm">
-              <span>11:34:37 am</span> / <span>00:01:42:445</span>
+              <span>6:35:55 pm</span> / <span>00:00:32:897</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -95,9 +95,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">ValidateBottomLinks</h5>
-<span class='badge badge-success'>01.07.2024 11:34:37 am</span>
-<span class='badge badge-danger'>01.07.2024 11:36:20 am</span>
-<span class='badge badge-default'>00:01:42:445</span>
+<span class='badge badge-success'>01.08.2024 6:35:55 pm</span>
+<span class='badge badge-danger'>01.08.2024 6:36:28 pm</span>
+<span class='badge badge-default'>00:00:32:897</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
 </div>
 </div>
 </div>    <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='C:\Users\Kalpesh Patil\git\repository5\CapstoneOneBestBuyAutomation\src\screenshots\ValidateBottomLinks1704607580158.png' src="C:\Users\Kalpesh Patil\git\repository5\CapstoneOneBestBuyAutomation\src\screenshots\ValidateBottomLinks1704607580158.png">
+<img data-featherlight='C:\Users\Kalpesh Patil\git\repository5\CapstoneOneBestBuyAutomation\src\screenshots\ValidateBottomLinks1704719188305.png' src="C:\Users\Kalpesh Patil\git\repository5\CapstoneOneBestBuyAutomation\src\screenshots\ValidateBottomLinks1704719188305.png">
     <div class="title">ValidateBottomLinks</div>
     </div></div>
 <div class="detail-body mt-4">
@@ -114,17 +114,36 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:36:19 am</td>
+        <td>6:36:28 pm</td>
         <td>
-          <textarea readonly class="code-block">java.lang.AssertionError: expected [Privacy Policy Hub - Best Buy] but found [BestBuy.com Terms and Conditions]
-	at org.testng.Assert.fail(Assert.java:111)
-	at org.testng.Assert.failNotEquals(Assert.java:1578)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:150)
-	at org.testng.Assert.assertEquals(Assert.java:132)
-	at org.testng.Assert.assertEquals(Assert.java:656)
-	at org.testng.Assert.assertEquals(Assert.java:666)
-	at utils.UtilClass.validateTitle(UtilClass.java:120)
-	at tests.TC05_ValidateBottomLinks.ValidateBottomLinks(TC05_ValidateBottomLinks.java:38)
+          <textarea readonly class="code-block">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element <a class="body-copy-sm mr-200" data-track="ft_legal_state_privacy_rights" href="/site/privacy-policy/state-privacy-rights/pcmcat204400050063.c?id=pcmcat204400050063" rel="noreferrer" target="_self">...</a> is not clickable at point (393, 447). Other element would receive the click: <div id="survey_window" class="modal fade modal-open in" role="dialog" style="margin-top: 151px; display: block;">...</div>
+  (Session info: chrome=120.0.6099.131)
+Build info: version: '4.11.0', revision: '040bc5406b'
+System info: os.name: 'Windows 11', os.arch: 'amd64', os.version: '10.0', java.version: '20.0.1'
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [a74979f501a0566679dc48f6f9bc6922, clickElement {id=5A3A3FE405EC63AAC981299FBFA30A67_element_164}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 120.0.6099.131, chrome: {chromedriverVersion: 120.0.6099.109 (3419140ab66..., userDataDir: C:\Users\KALPES~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63590}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:63590/devtoo..., se:cdpVersion: 120.0.6099.131, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (a74979f501a0566679dc48f6f9bc6922)] -> xpath: //a[contains(@class, 'body-copy-sm mr-200') and contains(text(), 'State Privacy Rights')]]
+Session ID: a74979f501a0566679dc48f6f9bc6922
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:67)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:484)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:518)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
+	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:578)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
+	at jdk.proxy2/jdk.proxy2.$Proxy16.click(Unknown Source)
+	at utils.UtilClass.click(UtilClass.java:80)
+	at pages.ValidataBottomLinksPage.clickStatePrivacyRights(ValidataBottomLinksPage.java:82)
+	at tests.TC05_ValidateBottomLinks.ValidateBottomLinks(TC05_ValidateBottomLinks.java:41)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:578)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
@@ -176,12 +195,12 @@
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">java.lang.AssertionError</p>
+<p class="name">org.openqa.selenium.ElementClickInterceptedException</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>java.lang.AssertionError</h4>
+<h4>org.openqa.selenium.ElementClickInterceptedException</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -195,7 +214,7 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:34:37 am</td>
+<td>18:35:55 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>ValidateBottomLinks</a>
 </td>
@@ -217,13 +236,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 7, 2024 11:34:26 am</h3>
+<h3>Jan 8, 2024 06:35:46 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 7, 2024 11:36:20 am</h3>
+<h3>Jan 8, 2024 06:36:28 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -293,7 +312,7 @@
 </div></div>
 <script>
 var timeline = {
-"ValidateBottomLinks":102.445
+"ValidateBottomLinks":32.897
 };
 </script>
 <div class="row">
