--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea9581">  <td>24/01/08 22:03:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05_ValidateBottomLinks.ValidateBottomLinks()[pri:0, instance:tests.TC05_ValidateBottomLinks@64b0598]">ValidateBottomLinks</td> 
-  <td>TestNG-tests-1@455501890</td>   <td></td> </tr>
-<tr bgcolor="b871a5">  <td>24/01/08 22:04:49</td>   <td>60935</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecifications.closeBrowser()[pri:0, instance:tests.TC05_ValidateBottomLinks@64b0598]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@455501890</td>   <td></td> </tr>
-<tr bgcolor="b871a5">  <td>24/01/08 22:03:42</td>   <td>-5671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecifications.launchBrowser(java.lang.String)[pri:0, instance:tests.TC05_ValidateBottomLinks@64b0598]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@455501890</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>24/01/11 17:55:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05_ValidateBottomLinks.ValidateBottomLinks()[pri:1, instance:tests.TC05_ValidateBottomLinks@18f8cd79]">ValidateBottomLinks</td> 
+  <td>TestNG-tests-1@1696263571</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>24/01/11 17:56:28</td>   <td>62642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05_ValidateBottomLinks.ValidateBottomLinksNegative()[pri:2, instance:tests.TC05_ValidateBottomLinks@18f8cd79]">ValidateBottomLinksNegative</td> 
+  <td>TestNG-tests-1@1696263571</td>   <td></td> </tr>
+<tr bgcolor="b871a5">  <td>24/01/11 17:57:16</td>   <td>110638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecifications.closeBrowser()[pri:0, instance:tests.TC05_ValidateBottomLinks@18f8cd79]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1696263571</td>   <td></td> </tr>
+<tr bgcolor="b871a5">  <td>24/01/11 17:57:16</td>   <td>110638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecifications.closeBrowser()[pri:0, instance:tests.TC05_ValidateBottomLinks@18f8cd79]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1696263571</td>   <td></td> </tr>
+<tr bgcolor="b871a5">  <td>24/01/11 17:56:27</td>   <td>60667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecifications.launchBrowser(java.lang.String)[pri:0, instance:tests.TC05_ValidateBottomLinks@18f8cd79]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1696263571</td>   <td></td> </tr>
+<tr bgcolor="b871a5">  <td>24/01/11 17:56:27</td>   <td>60667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecifications.launchBrowser(java.lang.String)[pri:0, instance:tests.TC05_ValidateBottomLinks@18f8cd79]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1696263571</td>   <td></td> </tr>
 </table>
